Add JMPS config for FileZipInput
Signed-off-by: Stefan Oehme <st.oehme@gmail.com>